@@ -115,6 +115,8 @@ namespace Map
 		NN<Math::CoordinateSystem> GetCoordinateSystem() const;
 		Optional<DB::TableDef> GetPropDef() const;
 		UInt32 GetNetworkCnt() const;
+
+		static void CalcDirReverse(NN<Data::ArrayListNN<Math::Geometry::LineString>> lineList, NN<Data::ArrayList<Double>> dirList, NN<Data::ArrayList<Bool>> reverseList);
 	};
 }
 #endif
